--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -27,7 +27,9 @@ jobs:
           ${{ runner.os }}-php-
 
     - name: Install dependencies
-      run: composer install --prefer-dist --no-progress
+      uses: php-actions/composer@v6
+      with:
+        php_version: 7.4
 
     - name: Run test suite
       run: composer run-script test
